    ``PHAB_ID=D202334``

  * util-security: Add `NullSslSession` related objects for use with non-existent
    `SSLSession`s.  ``PHAB_ID=D201421``

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * util-core: `c.t.io.Reader` and `c.t.io.Writer` are now abstracted over the type
    they produce/consume (`Reader[A]` and `Writer[A]`) and are no longer fixed to `Buf`.
    ``PHAB_ID=D195638``

  * util-core: `c.t.io.Reader.Writable` is now `c.t.io.Pipe`. Both `Writable` type and
    its factory method are deprecated; use `new Pipe[A]` instead.  ``PHAB_ID=D199536``

  * util-slf4j-api: Ensure that marker information is used when determining if log
    level is enabled for methods which support markers. ``PHAB_ID=D202387``

18.8.0
-------

Bug Fixes
~~~~~~~~~

  * util-core: Fixed an issue with Future.joinWith where it waits for
    completion of both futures even if one has failed. This also affects
    the join method, which is implemented in terms of joinWith. ``PHAB_ID=D191342``

18.7.0
-------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * util-core: Local.Context used to be a type alias for Array[Option[_]], now it is
    a new key-value liked structure. ``PHAB_ID=D182478``

18.6.0
-------

Breaking API Changes
~~~~~~~~~~~~~~~~~~~~

  * util-app: Allow users a way to override the argument parsing behavior in
    `c.t.app.App#nonExitingMain` which was inlined. Users can override `parseArgs`
    to define custom behavior. ``PHAB_ID=D181660``

  * util-core: Removed `c.t.u.NonFatal`, use `scala.util.control.NonFatal`
    instead. ``PHAB_ID=D181918``

  * util-class-preloader: This library has been removed since it deprecated. We
    no longer recommend that people do this. ``PHAB_ID=D174250``

Bug Fixes
~~~~~~~~~

  * util-app: Fix issue where in some environments, `URLClassLoader#getURLs` can
    return null, failing LoadService from initializing properly
    (see: https://github.com/google/guava/issues/2239). The `URLClassLoader` javadoc